kubernetes/cluster.yml
nodes:
  - address: 172.17.14.146
    user: rke
    role: [controlplane,etcd,worker]
    ssh_key_path: ~/.ssh/id_rsa
  - address: 172.17.14.148
    user: rke
    role: [controlplane,etcd,worker]
    ssh_key_path: ~/.ssh/id_rsa
  - address: 172.17.14.150
    user: rke
    role: [controlplane,etcd,worker]
    ssh_key_path: ~/.ssh/id_rsa

ignore_docker_version: true

ingress:
  extra_args:
    http-port: 81
    https-port: 443

services:
  kubelet: 
    extra_binds: 
      - "/lib/modules:/lib/modules"
  etcd:
    backup: true
    creation: 6h
    retention: 24h

addons: |-
  [...]
